RESOLVED FIXED131150
Assertion under RenderLayerCompositor::updateScrollCoordinatedLayer on time.com on iOS
https://bugs.webkit.org/show_bug.cgi?id=131150
Summary Assertion under RenderLayerCompositor::updateScrollCoordinatedLayer on time.c...
Simon Fraser (smfr)
Reported 2014-04-02 22:29:01 PDT
Assertion under RenderLayerCompositor::updateScrollCoordinatedLayer on time.com on iOS
Attachments
Patch (2.07 KB, patch)
2014-04-03 13:38 PDT, Simon Fraser (smfr)
bdakin: review+
Simon Fraser (smfr)
Comment 1 2014-04-03 13:38:47 PDT
Simon Fraser (smfr)
Comment 2 2014-04-03 13:47:11 PDT
Note You need to log in before you can comment on or make changes to this bug.